fix(Main): fix horizontal scroll

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -61,3 +61,7 @@ h6 {
 a {
   text-decoration: none;
 }
+
+li {
+  padding-right: 0.5rem;
+}
